# Stack-Overflow-Tag-Prediction

./: main.py  pyproject.toml
models/: mlb.pkl  model.pkl  vectorizer.pkl
notebooks/: EDA.ipynb  Model_Training.ipynb
